--- a/src/ChannelAdam.TransientFaultHandling/ChannelAdam.TransientFaultHandling.csproj
+++ b/src/ChannelAdam.TransientFaultHandling/ChannelAdam.TransientFaultHandling.csproj
@@ -1,18 +1,37 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
-    <Description>A .NET library that provides an abstraction for implementing retry policies.</Description>
+    <TargetFrameworks>net5.0;netstandard2.0;netstandard1.0</TargetFrameworks>
     <Version>0.0.0</Version>
     <Authors>Adam Craven</Authors>
-    <Copyright>Copyright 2014-2018 Adam Craven</Copyright>
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
+    <Company>Adam Craven</Company>
+    <Product>ChannelAdam.TransientFaultHandling</Product>
+    <Description>A .NET library that provides an abstraction for implementing retry policies.</Description>
+    <Copyright>Copyright 2014-2020 Adam Craven</Copyright>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/channeladam/ChannelAdam.TransientFaultHandling</PackageProjectUrl>
     <RepositoryUrl>https://github.com/channeladam/ChannelAdam.TransientFaultHandling</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageIconUrl>https://devzone.channeladam.com/img/channeladam/channeladam-logo.png</PackageIconUrl>
     <PackageTags>ChannelAdam,Retry Library,Retry Policies,Transient Fault Handling</PackageTags>
-    <PackageReleaseNotes>2.0.0 - Refactored out of ChannelAdam.Core, target .NET Standard 1.0, no strong name signing</PackageReleaseNotes>
+    <PackageReleaseNotes>
+3.0.0 - Multitarget .NET Standard 1.0, 2.0 and .NET 5.0, enabled nullable reference types.
+2.0.0 - Refactored out of ChannelAdam.Core, target .NET Standard 1.0, no strong name signing.
+    </PackageReleaseNotes>
+    <IsPackable>true</IsPackable>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <IncludeSource>true</IncludeSource>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" $(Nullable) != 'enable' ">
+    <NoWarn>$(NoWarn);CS8632</NoWarn>
   </PropertyGroup>
 
 </Project>
